<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"     android:orientation="vertical" >
        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/list_calendar_title"            android:textAppearance="?android:attr/textAppearanceMedium"            android:gravity="center" />        		<RelativeLayout		    android:layout_width="match_parent"		    android:layout_height="wrap_content" >				    <TextView		        android:id="@+id/edCalendarCabDate"		        android:layout_width="90sp"		        android:layout_height="wrap_content"		        android:layout_alignParentLeft="true"		        android:layout_alignParentTop="true"		        android:background="#AAAAAA"		        android:textColor="#FFFFFF"		        android:text="@string/cabData"		        android:lines="1" />				    <TextView		        android:id="@+id/edCalendarCabDisciplina"		        android:layout_width="wrap_content"		        android:layout_height="wrap_content"		        android:layout_alignParentRight="true"		        android:layout_alignParentTop="true"		        android:layout_toRightOf="@+id/edCalendarCabDate"		        android:background="#AAAAAA"		        android:textColor="#FFFFFF"		        android:text="@string/cabDisciplina"		        android:lines="1" />				    <TextView		        android:id="@+id/edCalendarCabProfessor"		        android:layout_width="wrap_content"		        android:layout_height="wrap_content"		        android:layout_alignParentLeft="true"		        android:layout_below="@+id/edCalendarCabDate"		        android:layout_toLeftOf="@+id/edCalendarCabDistancia"		        android:background="#AAAAAA"		        android:textColor="#FFFFFF"		        android:text="@string/cabProfessor"		        android:lines="1" />				    <TextView		        android:id="@+id/edCalendarCabDistancia"		        android:layout_width="wrap_content"		        android:layout_height="wrap_content"		        android:layout_alignBaseline="@+id/edCalendarCabProfessor"		        android:layout_alignBottom="@+id/edCalendarCabProfessor"		        android:layout_alignParentRight="true"		        android:background="#AAAAAA"		        android:textColor="#FFFFFF"		        android:text="@string/cabDistancia"		        android:lines="1" />		</RelativeLayout>        <ListView            android:id="@android:id/list"            android:layout_width="match_parent"            android:layout_height="wrap_content" >        </ListView>
</LinearLayout>