<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/main_footer" 
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/red"
                tools:context=".MainActivity" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logohome" />
        </LinearLayout>
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_calendars"
            android:onClick="btViewCalendarsClick"/>        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_history"
            android:onClick="btViewHistoryClick"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dcufscar" 
            android:contentDescription="@string/logo_description"/>

    </LinearLayout>

</RelativeLayout>
